# autocad-mcp

./: .gitignore  README.md  opencode.json  pyproject.toml  start_mcp_chatgpt.bat
.github/workflows/: test.yml
docs/: auto-dimension.md  file-ipc-error-model.md  file-ipc-manual-test.md  ke-hoach-chatgpt-http-bridge.md  phase0-baseline.md  phase2-remote-policy.md  phase4-oauth.md
lisp-code/: acadltdoc.lsp.example  attribute_tools.lsp  auto_dimension.lsp  auto_dimension_activex.lsp  auto_dimension_loader.lsp  auto_dimension_scope.lsp  mcp_dispatch.lsp
scripts/: phase0_streamable_http_spike.py  run-phase3-dev.ps1  run-phase4-oauth.ps1
src/autocad_mcp/: __main__.py  auto_dimension_tool.py  autodim.py  client.py  config.py  dimension_intelligence.py  http_server.py  oauth.py  phase1_dimension_perf.py  phase2_dimension_activex.py  phase3_dimension_scope.py  remote_policy.py  server.py
src/autocad_mcp/backends/: base.py  file_ipc.py  safe_file_ipc.py
tests/: test_auto_dimension.py  test_dimension_intelligence.py  test_file_ipc_reliability.py  test_file_ipc_safety.py  test_ipc_protocol.py  test_lisp_reliability_static.py  test_oauth.py  test_phase1_dimension_perf.py  test_phase2_dimension_activex.py  test_phase3_dimension_scope.py  test_remote_policy.py  test_streamable_http.py  test_tool_registration.py  test_transport_config.py
tests/fixtures/: block_attributes.json
