[project]
name = "autocad-mcp"
version = "3.0.0"
description = "MCP server for AutoCAD LT automation and headless DXF generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.1,<2.0",
    "PyJWT[crypto]>=2.11.0,<3.0",
    "ezdxf>=0.18",
    "matplotlib>=3.7",
    "Pillow>=10.0.0",
    "structlog>=24.0.0",
    "pywin32>=305; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autocad_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"lisp-code" = "autocad_mcp/lisp-code"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
